--- a/dev/index.html
+++ b/dev/index.html
@@ -16,98 +16,98 @@
                 <div class="cards product__cards">
                     <div class="card">
                         <a href="#" class="card__sub-title">Vegetable</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/broccoli.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Calabrese Broccoli</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Calabrese Broccoli</a></h4>
                         <div class="card__footer">
-                            <div class="price">
+                            <div class="price"> 
                                 <a href="#" class="price__item price__item--transparent">$ 25.00 USD</a>
                                 <a href="#" class="price__item">$ 21.00 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card">
                         <a href="#" class="card__sub-title">Vegetable</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/corn.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Fresh Corn</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Fresh Corn</a></h4>
                         <div class="card__footer">
                             <div class="price">
                                 <a href="#" class="price__item price__item--transparent">$ 21.23 USD</a>
                                 <a href="#" class="price__item">$ 18.00 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card">
                         <a href="#" class="card__sub-title">Millets</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/pistachio.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Dried Pistachio</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Dried Pistachio</a></h4>
                         <div class="card__footer">
                             <div class="price">
                                 <a href="#" class="price__item price__item--transparent">$ 61.00 USD</a>
                                 <a href="#" class="price__item">$ 48.00 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card">
                         <a href="#" class="card__sub-title">Vegetable</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/tomato.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Vegan Red Tomato</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Vegan Red Tomato</a></h4>
                         <div class="card__footer">
                             <div class="price">
                                 <a href="#" class="price__item price__item--transparent">$ 14.00 USD</a>
                                 <a href="#" class="price__item">$ 9.37 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card">
                         <a href="#" class="card__sub-title">Fruits</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/almonds.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Organic Almonds</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Organic Almonds</a></h4>
                         <div class="card__footer">
                             <div class="price">
                                 <a href="#" class="price__item price__item--transparent">$ 21.00 USD</a>
                                 <a href="#" class="price__item">$ 18.00 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="card">
                         <a href="#" class="card__sub-title">Millets</a>
-                        <div class="card__image">
+                        <a href="#" class="card__image">
                             <img src="images/hazelnut.svg" alt="1">
-                        </div>
-                        <h4 class="card__title">Calabrese Broccoli</h4>
+                        </a>
+                        <h4 class="card__title"><a href="#" class="card__text">Calabrese Broccoli</a></h4>
                         <div class="card__footer">
                             <div class="price">
                                 <a href="#" class="price__item price__item--transparent">$ 43.00 USD</a>
                                 <a href="#" class="price__item">$ 34.00 USD</a>
                             </div>
-                            <div class="rating">
+                            <a href="#" class="rating">
                                 <img src="images/stars.svg" alt="1">
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
