--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Title</title> 
 </head> 
 <body>
     <div class="wrapper">
@@ -15,13 +15,15 @@
                 <h2 class="title title--center">Our Products</h2>
                 <div class="cards product__cards">
                     <div class="card">
-                        <a href="#" class="card__sub-title">Vegetable</a>
+                        <a href="#" class="card__sub-title ">Vegetable</a>
                         <a href="#" class="card__image">
                             <img src="images/broccoli.svg" alt="1">
                         </a>
+                        
                         <h4 class="card__title"><a href="#" class="card__text">Calabrese Broccoli</a></h4>
                         <div class="card__footer">
-                            <div class="price"> 
+                            <div class="price">
+                                 
                                 <a href="#" class="price__item price__item--transparent">$ 25.00 USD</a>
                                 <a href="#" class="price__item">$ 21.00 USD</a>
                             </div>
