--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,34 @@
                 <h2 class="title title--center">Our Products</h2>
                 <div class="cards product__cards">
                     <div class="card">
-                        <a href="#" class="card__sub-title ">Vegetable</a>
+                        <a href="#" class="card__sub-title">Vegetable</a>
                         <a href="#" class="card__image">
                             <img src="images/broccoli.svg" alt="1">
                         </a>
                         
                         <h4 class="card__title"><a href="#" class="card__text">Calabrese Broccoli</a></h4>
                         <div class="card__footer">
-                            <div class="price">
-                                 
+                            <div class="price"> 
                                 <a href="#" class="price__item price__item--transparent">$ 25.00 USD</a>
                                 <a href="#" class="price__item">$ 21.00 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
@@ -43,9 +56,23 @@
                                 <a href="#" class="price__item price__item--transparent">$ 21.23 USD</a>
                                 <a href="#" class="price__item">$ 18.00 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
@@ -59,9 +86,23 @@
                                 <a href="#" class="price__item price__item--transparent">$ 61.00 USD</a>
                                 <a href="#" class="price__item">$ 48.00 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
@@ -75,9 +116,23 @@
                                 <a href="#" class="price__item price__item--transparent">$ 14.00 USD</a>
                                 <a href="#" class="price__item">$ 9.37 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
@@ -91,9 +146,23 @@
                                 <a href="#" class="price__item price__item--transparent">$ 21.00 USD</a>
                                 <a href="#" class="price__item">$ 18.00 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
@@ -107,9 +176,23 @@
                                 <a href="#" class="price__item price__item--transparent">$ 43.00 USD</a>
                                 <a href="#" class="price__item">$ 34.00 USD</a>
                             </div>
-                            <a href="#" class="rating">
-                                <img src="images/stars.svg" alt="1">
-                            </a>
+                            <ul class="rating">
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                                <li><a href="#">
+                                    <img src="images/star.svg" alt="star">
+                                </a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
